fix margin on socials-small

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -126,7 +126,7 @@ body a {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-left: 4rem;
+/*   margin-left: 4rem; */
   bottom: 10px;
 }
 
